<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2021 Appaxer
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.preference.PreferenceCategory
        app:key="language_settings"
        app:title="@string/language_settings">

        <androidx.preference.DropDownPreference
            app:entries="@array/app_languages"
            app:entryValues="@array/app_languages_values"
            app:icon="@drawable/ic_app_language"
            app:key="app_language"
            app:summary="@string/select_app_language_summary"
            app:title="@string/select_app_language_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:key="dark_theme"
        app:title="@string/dark_theme">

        <androidx.preference.SwitchPreference
            app:icon="@drawable/ic_dark_theme"
            app:key="enable_dark_theme"
            app:singleLineTitle="true"
            app:title="@string/dark_theme_title" />

    </androidx.preference.PreferenceCategory>

    <PreferenceCategory
        app:key="about"
        app:title="@string/about">

        <androidx.preference.Preference
            app:key="version"
            app:title="@string/current_version"
            tools:summary="1.0.0" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
